--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,8 @@
 # Site settings
 title: EVflex
 
-baseurl: '' # the subpath of your site, e.g. /blog
+# baseurl: '' # the subpath of your site, e.g. /blog
+baseurl: "/evflex" # the subpath of your site, e.g. /blog
 url: 'http://EVflex.org' # the base hostname & protocol for your site
 
 # Build settings
