--- a/_config.yml
+++ b/_config.yml
@@ -1,33 +1,22 @@
 # Site settings
 title: EVflex
+email: auke@aukehoekstra.nl
+description: > # this means to ignore newlines until "baseurl:"
+  Write an awesome description for your new site here. You can edit this
+  line in _config.yml. It will appear in your document head meta (for
+  Google search results) and in your feed.xml site description.
+baseurl: "/evflex" # Zo werkt hij in R
+baseurl: "" # Zo werkt hij in 127.0.0.1:4000
 
-# baseurl: '' # the subpath of your site, e.g. /blog
-baseurl: "/evflex" # the subpath of your site, e.g. /blog
-url: 'http://EVflex.org' # the base hostname & protocol for your site
+url: "http://EVflex.org" # the base hostname & protocol for your site
+#twitter_username: jekyllrb
+github_username:  AukeHoekstra
+permalink: /:year/:month/:title.html
 
 # Build settings
-markdown:            kramdown
-relative_permalinks: false
-permalink:           :title/
+markdown: kramdown
 
 pagination:          true
 paginate:            8
 paginate_path:       page/:num/
 
-sass:
-    sass_dir: _sass
-    style:    compressed
-
-defaults:
-  -
-      scope:
-        path: '_posts'
-        type: 'posts'
-      values:
-        reading_time: false
-        # Meta
-        show_tags: true
-        show_categories: true
-        # Social
-        share_buttons: true
-        disqus: true
